Fixed sizing of modal and changed checkboxContent into function
-Modal larger and responsive now so doesn't look too small on mobile screen
-checkboxContent originally had bug: if parole wasn't checked, it would write "null" in the email. Also would have extra commas

--- a/src/components/EligibilityPage/EligibilityPage.scss
+++ b/src/components/EligibilityPage/EligibilityPage.scss
@@ -1,6 +1,6 @@
 .eligibilityPage{
     margin-left: 7vw;
-    margin-right: 5.5vw;
+    margin-right: 7vw;
 
     & h2{
         margin-top: -2vh;
