--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,11 +1,12 @@
 .modal{
     background-color: white;
-    height: 400px;
+    height: 70%;
     // width: 550px;
-    width: 44%;
+    width: 80%;
     position: fixed;
-    top: 25%;
-    left: 27%;
+    top: 15%;
+    left: 7.5%;
+    right: 10%;
 
     border-radius: 15px;
     border: 1px solid grey;
